update margin styling

--- a/static/css/jernihin.css
+++ b/static/css/jernihin.css
@@ -51,6 +51,7 @@ div { box-sizing: border-box; }
 .tm-mt-35 { margin-top: 35px; }
 .tm-mb-0 { margin-bottom: 0; }
 .tm-mb-15 { margin-bottom: 15px; }
+.tm-mb-20 { margin-bottom: 20px; }
 .tm-mb-30 { margin-bottom: 30px; }
 .tm-mb-40 { margin-bottom: 40px; }
 .tm-mb-60 { margin-bottom: 50px; }
