--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
         <div class="tm-row tm-intro-row">
             <img src="{{url_for('static', filename='img/intro.jpg')}}" alt="Intro" class="tm-intro-img">
             <div class="tm-col tm-bg-white tm-intro-pad">
-                <h2 class="tm-color-primary tm-page-title">Apa itu JERNIHin?</h2>
+                <h2 class="tm-color-primary tm-page-title tm-mb-15">Apa itu JERNIHin?</h2>
                 <div class="tm-row tm-content-row">
                     <div class="tm-col-6 tm-intro-col-l">
                         <p>
@@ -91,7 +91,7 @@
                 <i class="fas fa-times"></i>
             </a>
         </div>
-        <h2 class="tm-color-primary tm-about-col tm-mb-30 tm-page-title">Apa itu <i>Water Quality Index</i>?</h2>
+        <h2 class="tm-color-primary tm-about-col tm-mb-20 tm-page-title">Apa itu <i>Water Quality Index</i>?</h2>
         <div class="tm-row tm-about-row">
             <div class="tm-col tm-about-col tm-about-left">
                 <img src="{{url_for('static', filename='img/predict.jpg')}}" alt="Prediction" class="tm-mb-15">
@@ -171,7 +171,7 @@
 
             <!-- navigation and description -->
             <div class="tm-col tm-gallery-right">
-                <h2 class="tm-color-primary tm-mt-15 tm-page-title">Development Team</h2>
+                <h2 class="tm-color-primary tm-mb-15 tm-page-title">Development Team</h2>
                 <div class="tm-gallery-right-inner">
                     <ul class="tm-gallery-links">
                         <li>
@@ -223,7 +223,7 @@
                 <i class="fas fa-times"></i>
             </a>
         </div>
-        <h2 class="tm-contact-col tm-color-primary tm-page-title tm-mb-40">Contact Us</h2>
+        <h2 class="tm-contact-col tm-color-primary tm-page-title tm-mb-20">Contact Us</h2>
         <div class="tm-row tm-contact-row">
             <div class="tm-col tm-contact-col">
                 <form id="contact-form" action="" method="POST" class="tm-contact-form">
