update predict styling

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -7,28 +7,28 @@
     <div class="tm-predict">
         <div class="tm-predict-result">
             {% if result == 5 %}
-            <p class="tm-predict-title">Your water quality is <span class="result green">Excellent</span></p>
-            <p class="tm-predict-desc"><span>You can drink your water safely</span></p>
+            <p class="tm-predict-title">Kualitas air Anda <span class="result green">Sangat Bagus</span></p>
+            <p class="tm-predict-desc"><span>Anda dapat meminum air Anda dengan aman</span></p>
             {% endif %}
     
             {% if result == 4 %}
-            <p>Your water quality is <span class="result green">Good</span></p>
-            <p class="tm-predict-desc">You can drink your water safely</p>
+            <p class="tm-predict-title">Kualitas air Anda <span class="result green">Bagus</span></p>
+            <p class="tm-predict-desc"><span>Anda dapat meminum air Anda dengan aman</span></p>
             {% endif %}
     
             {% if result == 3 %}
-            <p>Your water quality is <span class="result orange">Fair</p>
-            <p class="tm-predict-desc">You can drink your water, but it is recommended to boil it first</p>
+            <p class="tm-predict-title">Kualitas air Anda <span class="result orange">Sedang</p>
+            <p class="tm-predict-desc"><span>Anda dapat meminum air Anda, tetapi direkomendasikan untuk merebusnya terlebih dahulu</span></p>
             {% endif %}
     
             {% if result == 2 %}
-            <p>Your water quality is <span class="orange">Marginal</span></p>
-            <p class="tm-predict-desc">Your water sill needs to be purified and further testing</p>
+            <p class="tm-predict-title">Kualitas air Anda <span class="orange">Buruk</span></p>
+            <p class="tm-predict-desc"><span>Air Anda perlu dilakukan penjernihan dan pengujian lebih lanjut</span></p>
             {% endif %}
     
             {% if result == 1 %}
-            <p>Your water quality is <span class="red">Poor</span></p>
-            <p class="tm-predict-desc">You cannot drink your water</p>
+            <p class="tm-predict-title">Kualitas air Anda <span class="red">Sangat Buruk</span></p>
+            <p class="tm-predict-desc"><span>Anda tidak dapat meminum air Anda</span></p>
             {% endif %}
 
             {% if result %}
