--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,8 @@
                    <b><i>"Save Water, Save Life"</i></b> 
                 </p>
                 <p class="tm-mb-15">
-                    <i>Water quality index</i> (WQI) adalah salah satu alat untuk mengevaluasi tingkat pencemaran perairan yang cukup efektif dengan informasi yang komprehensif, mudah dipahami dan dapat digunakan olehmasyarakat. Metode analisa WQI dari beberapa parameter kualitas air dapat menjadi salah satu alat monitoring kualitas air. Nilai WQI berkisar dari 0 – 100 dengan kriteria nilai yang tinggi menunjukkan kualitas air yang lebih baik.
+                    <i>Water quality index</i> (WQI) adalah metode sederhana yang digunakan sebagai bagian dari survei kualitas air yang dipengaruhi oleh proses alam dan aktivitas manusia. 
+                    Indeks Kualitas Air dikembangkan dengan konsep bahwa nilai indeks yang semakin tinggi menunjukkan kualitas air yang semakin baik. Metode yang diusulkan untuk membandingkan kualitas air dari berbagai sumber air didasarkan pada delapan parameter kualitas air seperti Fecal, ph, Temperaure, Phosphorus, Oxygen, total sediment, Nitrogen dan Turbidity.
                 </p>
             </div>
             <div class="tm-col tm-about-col">
