--- a/templates/index.html
+++ b/templates/index.html
@@ -109,10 +109,10 @@
                 </p>
                 <ol class="tm-mb-15">
                     <li><b>Sebagai Kebutuhan Dasar Manusia</b>
-                        <p>Air adalah salah satu kebutuhan paling dasar untuk mendukung hidup manusia. Hal ini merefleksikan betapa pentingnya air dalam hidup manusia. Namun, saat ini terdapat tantangan sumber dan ketersediaan air bersih yang semakin mendesak dan harus ditangani.</p>
+                        <p>Air adalah salah satu kebutuhan paling dasar untuk mendukung hidup manusia. Hal ini merefleksikan betapa pentingnya air dalam hidup manusia. Parameter untuk mengukur kualitas air baik secara fisik, kimia, atau bakteriologi harus sesuai dengan standarnya.</p>
                     </li>
                     <li><b>Kualitas yang aman untuk dikonsumsi</b>
-                        <p>Kualitas air dapat didefinisikan sebagai pengukuran kecocokan air untuk kegunaan tertentu yang biasanya didasarkan pada karakteristik, yaitu: Fisik (Temperatur, Warna, Sedimentasi); Kimiawi (Oksigen, pH, Salinitas, Nutrien); dan Biologis (Bakteri, Alga, Fitoplankton).</p>
+                        <p>Kualitas air yang aman dikonsumsi adalah kualitas air yang memenuhi kriteria baik Fisik (Temperatur, Warna, Sedimentasi); Kimiawi (Oksigen, pH, Salinitas, Nutrien); maupun Biologis (Bakteri, Alga, Fitoplankton).</p>
                     </li>
                 </ol>
                 <p class="tm-mb-15">
