update predict ref link

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -19,22 +19,19 @@
             {% if result == 3 %}
             <p class="tm-predict-title">Kualitas air Anda <span class="result orange">Sedang</p>
             <p class="tm-predict-desc"><span>Anda dapat meminum air Anda, tetapi direkomendasikan untuk merebusnya terlebih dahulu</span></p>
-            <p class="tm-predict-desc"><span><u><a href="https://projectchild.ngo/blog/2019/08/01/standardisasi-kualitas-air/">Standardisasi Kualitas Air Menurut Dinas Kesehatan dan Dinas Lingkungan Hidup </a></span></u>
-            </p>
+            <p class="tm-predict-desc"><span><a href="https://projectchild.ngo/blog/2019/08/01/standardisasi-kualitas-air" target="_blank">Standardisasi Kualitas Air Menurut Dinas Kesehatan dan Dinas Lingkungan Hidup</a></span></p>
             {% endif %}
     
             {% if result == 2 %}
             <p class="tm-predict-title">Kualitas air Anda <span class="orange">Buruk</span></p>
             <p class="tm-predict-desc"><span>Air Anda perlu dilakukan penjernihan dan pengujian lebih lanjut</span></p>
-            <p class="tm-predict-desc"><span><u><a href="https://projectchild.ngo/blog/2019/08/01/standardisasi-kualitas-air/">Standardisasi Kualitas Air Menurut Dinas Kesehatan dan Dinas Lingkungan Hidup </a></span></u>
-            </p>
+            <p class="tm-predict-desc"><span><a href="https://projectchild.ngo/blog/2019/08/01/standardisasi-kualitas-air" target="_blank">Standardisasi Kualitas Air Menurut Dinas Kesehatan dan Dinas Lingkungan Hidup</a></span></p>
             {% endif %}
     
             {% if result == 1 %}
             <p class="tm-predict-title">Kualitas air Anda <span class="red">Sangat Buruk</span></p>
             <p class="tm-predict-desc"><span>Anda tidak dapat meminum air Anda</span></p>
-            <p class="tm-predict-desc"><span><u><a href="https://projectchild.ngo/blog/2019/08/01/standardisasi-kualitas-air/">Standardisasi Kualitas Air Menurut Dinas Kesehatan dan Dinas Lingkungan Hidup </a></span></u>
-            </p>
+            <p class="tm-predict-desc"><span><a href="https://projectchild.ngo/blog/2019/08/01/standardisasi-kualitas-air" target="_blank">Standardisasi Kualitas Air Menurut Dinas Kesehatan dan Dinas Lingkungan Hidup</a></span></p>
             {% endif %}
 
             {% if result %}
