--- a/templates/header.html
+++ b/templates/header.html
@@ -1,15 +1,20 @@
-<header class="tm-site-header">
-    <div class="navbar">
-        <a href="/" class="navbar-container">
-            <div class="navbar-left">
-                <img src="{{url_for('static', filename='img/Jernihin.svg')}}" alt="">
+<nav>
+    <div class="layar-dalam">
+          <header class="tm-site-header">
+            <div class="navbar">
+                <a href="/" class="navbar-container">
+                    <div class="navbar-left">
+                        <img src="{{url_for('static', filename='img/logo.png')}}" alt="">
+                    </div>
+                    <div class="navbar-right">
+                        <h1 class="tm-title tm-mt-0 tm-mb-0">
+                            <span class="tm-color-primary">Waterify</span><span class="tm-color-gray-2"></span>
+                        </h1>
+                        <em class="tm-tagline tm-color-light-gray">Water Quality Prediction</em>
+                    </div>
+                </a>
             </div>
-            <div class="navbar-right">
-                <h1 class="tm-title tm-mt-0 tm-mb-0">
-                    <span class="tm-color-primary">JERNIH</span><span class="tm-color-gray-2">in</span>
-                </h1>
-                <em class="tm-tagline tm-color-light-gray">Water Quality Prediction</em>
-            </div>
-        </a>
+        </header>
     </div>
-</header>
+</nav>
+
