--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <!-- Video Banner -->
 <div id="tm-video-container">
     <video autoplay muted loop id="tm-video">
-        <source src="{{url_for('static', filename='video/ocean-sea-wave-video.mp4')}}" type="video/mp4">
+        <source src="{{url_for('static', filename='video/Background1.mp4')}}" type="video/mp4">
     </video>  
     <i id="tm-video-control-button" class="fas fa-pause"></i>
 </div>
@@ -56,7 +56,7 @@
         <div class="tm-row tm-intro-row">
             <img src="{{url_for('static', filename='img/intro.jpg')}}" alt="Intro" class="tm-intro-img">
             <div class="tm-col tm-bg-white tm-intro-pad">
-                <h2 class="tm-color-primary tm-page-title tm-mb-15">Apa itu JERNIHin?</h2>
+                <h2 class="tm-color-primary tm-page-title tm-mb-15">What is Waterify?</h2>
                 <div class="tm-row tm-content-row">
                     <div class="tm-col-6 tm-intro-col-l">
                         <p>
@@ -71,7 +71,7 @@
                             Jadi, kami mengambil beberapa inspirasi untuk menggunakan <i>dataset</i> indeks kualitas air (WQI) untuk memahami jenis air minum yang aman dengan menerapkan <i>machine learning</i> untuk membedakan antara air minum dan air yang tidak layak untuk diminum.
                         </p>
                         <p>
-                            Jernihin adalah aplikasi berbasis <i>website</i> untuk memprediksi tingkat kualitas air yang dapat memberikan hasil prediksi air tersebut apakah aman untuk dikonsumsi atau tidak layak untuk dikonsumsi.
+                            Waterify adalah aplikasi berbasis <i>website</i> untuk memprediksi tingkat kualitas air yang dapat memberikan hasil prediksi air tersebut apakah aman untuk dikonsumsi atau tidak layak untuk dikonsumsi.
                         </p>
                         <div class="tm-text-center">
                             <a href="#" class="tm-btn btn-blue mfp-prevent-close tm-btn-next">
