--- a/templates/predict.html
+++ b/templates/predict.html
@@ -50,13 +50,14 @@
                 <div class="col-md-6 mb-3">
                     <div class="form-floating">
                         <input type="nunmber" name="fecal" class="form-control" id="fecal" placeholder="WQI Fecal" onkeypress="return isNumber(event)" required>
-                        <label for="fecal" class="form-label">WQI Fecal</label>
+                        <label for="fecal" class="form-label"> <i>WQI Fecal</i>
+                            </label>
                     </div>
                 </div>
                 <div class="col-md-6 mb-3">
                     <div class="form-floating">
                         <input type="nunmber" name="oxygen" class="form-control" id="oxygen" placeholder="WQI Oxygen" onkeypress="return isNumber(event)" required>
-                        <label for="oxygen" class="form-label">WQI Oxygen</label>
+                        <label for="oxygen" class="form-label"> <i>WQI Oxygen</i></label>
                     </div>
                 </div>
             </div>
@@ -64,13 +65,13 @@
                 <div class="col-md-6 mb-3">
                     <div class="form-floating">
                         <input type="nunmber" name="ph" class="form-control" id="ph" placeholder="WQI pH" onkeypress="return isNumber(event)" required>
-                        <label for="ph" class="form-label">WQI pH</label>
+                        <label for="ph" class="form-label"> <i>WQI pH</i></label>
                     </div>
                 </div>
                 <div class="col-md-6 mb-3">
                     <div class="form-floating">
                         <input type="nunmber" name="tot_sediment" class="form-control" id="tot_sediment" placeholder="WQI Total Sediment" onkeypress="return isNumber(event)" required>
-                        <label for="tot_sediment" class="form-label">WQI Total Sediment</label>
+                        <label for="tot_sediment" class="form-label"><i>WQI Total Sediment</i></label>
                     </div>
                 </div>
             </div>
@@ -78,13 +79,13 @@
                 <div class="col-md-6 mb-3">
                     <div class="form-floating">
                         <input type="nunmber" name="temp" class="form-control"  id="temp" placeholder="WQI Temperature" onkeypress="return isNumber(event)" required>
-                        <label for="temp" class="form-label">WQI Temperature</label>
+                        <label for="temp" class="form-label"><i>WQI Temperature</i></label>
                     </div>
                 </div>
                 <div class="col-md-6 mb-3">
                     <div class="form-floating">
                         <input type="nunmber" name="nitrogen" class="form-control" id="nitrogen" placeholder="WQI Nitrogen" onkeypress="return isNumber(event)" required>
-                        <label for="nitrogen" class="form-label">WQI Nitrogen</label>
+                        <label for="nitrogen" class="form-label"><i>WQI Nitrogen</i></label>
                     </div>
                 </div>
             </div>
@@ -92,20 +93,20 @@
                 <div class="col-md-6 mb-3">
                     <div class="form-floating">
                         <input type="nunmber" name="phosphorus" class="form-control" id="phosphorus" placeholder="WQI Phosphorus" onkeypress="return isNumber(event)" required>
-                        <label for="phosphorus" class="form-label">WQI Phosphorus</label>
+                        <label for="phosphorus" class="form-label"><i>WQI Phosphorus</i></label>
                     </div>
                 </div>
                 <div class="col-md-6 mb-3">
                     <div class="form-floating">
                         <input type="nunmber" name="turbidity" class="form-control" id="turbidity" placeholder="WQI Turbidity" onkeypress="return isNumber(event)" required>
-                        <label for="turbidity" class="form-label">WQI Turbidity</label>
+                        <label for="turbidity" class="form-label"><i>WQI Turbidity</i></label>
                     </div>
                 </div>
             </div>
             
             <div class="form-group">
                 <button type="reset" class="tm-btn btn-red">Reset</button>
-                <button type="submit" class="tm-btn btn-blue tm-ml-10">Prediksi</button>
+                <button type="submit" class="tm-btn btn-blue tm-ml-10">Predict</button>
             </div>
         </form>
     </div>
